k8s/namespaces/clusters/betty/networking/external-services/octoprint_kobra/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: &app octoprint-kobra
  namespace: networking
  labels:
    app.kubernetes.io/name: *app
    app.kubernetes.io/instance: *app
spec:
  ports:
    - name: http
      port: &port 81
      targetPort: *port
      protocol: TCP
