k8s/namespaces/clusters/betty/networking/external-services/octoprint_kobra/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: &app octoprint-kobra
  namespace: networking
  labels:
    app.kubernetes.io/name: *app
    app.kubernetes.io/instance: *app
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/whitelist-source-range: "10.0.0.0/8,172.16.0.0/12,192.168.0.0/16"
    cert-manager.io/cluster-issuer: ${CLUSTER_CERT}
    hajimari.io/enable: "true"
    hajimari.io/group: "Internal"
    hajimari.io/icon: "printer-3d-nozzle"
    hajimari.io/appName: *app
spec:
  ingressClassName: nginx
  rules:
    - host: &host "octoprint-kobra.${SECRET_DOMAIN}"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: *app
                port:
                  number: 81
  tls:
    - secretName: octoprint-kobra-tls
      hosts:
        - *host
